<resources>
    <string name="app_name">OnlineVizoraLejelentes</string>
    <string name="udvozlo">Üdvözöljük az SZTE Víznél</string>
    <string name="emailcim">Email cím</string>
    <string name="jelszo">Jelszó</string>
    <string name="jelszo2">Jelszó Újra</string>
    <string name="bejelentkezes">Bejelentkezés</string>
    <string name="regisztracio">Regisztráció</string>
    <string name="udvozlo_main">Miben segíthetünk?</string>
    <string name="szamlak">Számlák</string>
    <string name="vizorale">Vízóra lejelentés</string>
    <string name="hiba_be">Hiba bejelentése</string>
    <string name="ugyfelszol">Ügyfélszolgálat</string>
    <string name="informaciok">Vízminőség és Információk</string>
    <string name="tudatoshasznalat">Tudatos vízhasználat</string>
    <string name="logout">Kijelentkezés</string>
    <string name="cancel">Mégse</string>
    <string name="iranyito_szam">Irányító szám</string>
    <string name="city">Város</string>
    <string name="street">Utca</string>
    <string name="haz_szam">Ház szám</string>
    <string name="save">Mentés</string>
    <string name="viz_ora_allas">Víz óra állás:</string>
    <string name="upload">Feltöltés</string>
    <string name="vissza">Vissza</string>
    <string name="v_z_ra_ll_s">Vízóra állás</string>
    <string name="c_m">Cím</string>
    <string name="email">Email</string>
    <string name="delete">Törlés</string>
</resources>