<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    android:padding="16dp">



    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/udvozlo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/emailcim"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/jelszo"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/password2EditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/jelszo2"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="loginButton"
            android:theme="@style/Button.darkPurple"
            android:padding="8dp"
            android:text="@string/bejelentkezes" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="registerButton"
            android:padding="8dp"
            android:theme="@style/Button.red"
            android:text="@string/regisztracio" />
    </LinearLayout>

</LinearLayout>