<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_height="48dp"
        android:text="@string/email"/>

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_height="48dp"
        android:text="@string/c_m"/>

    <TextView
        android:id="@+id/vizOraTextView"
        android:layout_width="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_height="48dp"
        android:text="@string/v_z_ra_ll_s"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vissza"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        app:cornerRadius="0dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:onClick="goBack"/>



</LinearLayout>
