<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextPostalCode"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/iranyito_szam"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/city"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/editTextStreet"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/street"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/editTextHouseNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/haz_szam"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/buttonSaveLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            app:cornerRadius="0dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/save"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/spinningImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/sztelogo.jpg"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>