<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background_image"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/udvozlo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/welcomeRegTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/regisztracio"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>


    <EditText
        android:id="@+id/email2EditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/emailcim"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/password2EditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/jelszo"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/password22EditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/jelszo2"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="2000dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="firstRegButton"
            android:padding="8dp"
            android:backgroundTint="@color/red"
            app:cornerRadius="0dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/regisztracio" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="2000dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="cancelButton"
            android:padding="8dp"
            android:backgroundTint="@color/red"
            app:cornerRadius="0dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>